﻿0.7.2
=====

Bugfixes:

  * Fix missing edit toolbar during preview.  Reported by hanspeterklapf.
  * Fix MS SQL error when searching for user contributions (hanspeterklapf).
  * Fix "array index '1' is invalid" error during setup with Resin 3.2.1.
    Reported by James.
  * Fix TOC rendering issue when depth exceeds the configured max depth.

Translation Updates:

  * Updated Russian translations (shar).


0.7.1
=====

New Features:

  * Upgrade to Lucene Search 2.4.1.

Bugfixes:

  * Search by login on the Special:Roles page returned no results for users
    without at least one role.  Reported by tapaya and rebecca.
  * Fix incorrect LDAP sample configuration.  Reported with a fix by Tobias
    Kalbitz.
  * Display signatures even if there is no email addresss specified (axelclk).

Translation Updates:

  * Added Russian translations (shar).
  * Updated German translations (axelclk).
  * Updated Portugese (Brazilian) translations (leandes).


0.7.0
=====

New Features:

  * Login and authentication completely rewritten to take better advantage
    of Spring Security capabilities.
  * Special:OrphanedPages added to display un-linked pages (hanspeterklapf).
  * Remove ability to automatically upgrade from versions prior to 0.5.0.
  * "Next" and "prev" diff links added to Special:History to match Mediawiki.
  * Number of characters changed in a diff is now displayed on recent changes,
    history and other pages to match Mediawiki.
  * Signficant (5-10x or more) performance improvement of image rendering by
    making better use of cache.  Suggestions from Jim.
  * Allow users to create custom signatures, rather than using the same
    signature pattern for all users.
  * Modify Special:Specialpages so that it is localized for each visitor,
    rather than always defaulting to the language for which the wiki was setup.
  * Provide the capability to redirect to a virtual wiki using syntax of the
    form "#REDIRECT [[:virtual:Topic]].  Requested by tfschueller.